updated contribution and name

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Netherlands eScience Center Guide</title>
+  <title>MDW Software Development Guide</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport"
@@ -16,10 +16,10 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: 'Netherlands eScience Center Guide',
-      repo: 'NLeSC/guide',
+      name: 'MDW Software Development Guide',
+      repo: 'mdw-nl/guide',
       loadSidebar: true,
-      logo:'/images/netherlands-escience-center-logo-RGB.png',
+      logo:'https://www.medicaldataworks.nl/assets/img/Logo.png',
       alias: {
         '/.*/_sidebar.md': '/_sidebar.md'
       },
